--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,15 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <paper.version>1.19.3-R0.1-SNAPSHOT</paper.version> <!-- Ganti dengan versi Paper yang Anda gunakan -->
+        <paper.version>1.19.3</paper.version> <!-- Versi stabil -->
     </properties>
+
+    <repositories>
+        <repository>
+            <id>papermc-repo</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
