--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
-name: FiledPlugin
-main: com.filed.FiledPlugin
-version: 1.3-SNAPSHOT
-description: A plugin to download files to various directories and support non-direct links.
+name: FileDownloader
+version: 1.0
+main: com.hansproduction.filed.FileDownloaderPlugin
+api-version: 1.21
 commands:
   filed:
-    description: Main command for FiledPlugin.
-    usage: /filed <download|reload|list> [args]
+    description: File downloader commands
+    usage: /filed <down/reload> ...
+    permission: filed.use
