--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - name: Set up Maven
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'  # Ganti dengan versi Java yang Anda gunakan
-          distribution: 'adopt'
+         distribution: 'temurin'
+         java-version: '17'
+         cache: maven
 
       - name: Build with Maven
         run: mvn clean package
