--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
          java-version: '17'
 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean install
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
